[package]
name = "readfilez"
version = "0.1.2"
authors = ["Erik Zscheile <erik.zscheile@gmail.com>"]
description = "Quite fast file to slice reading"
license = "MIT"
repository = "https://github.com/zserik/readfilez"

[features]
default = []
seek_convenience = []

[dependencies]
boolinator = "2.4"
memmap = "0.7"
