[package]
name = "readfilez"
version = "0.2.0"
authors = ["Erik Zscheile <erik.zscheile@gmail.com>"]
description = "Quite fast file to slice reading"
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/zserik/readfilez"

[features]
seek_convenience = []

[dependencies]
delegate = "0.3"
memmap = "0.7"
