[package]
name = "readfilez"
version = "0.2.1"
authors = ["Erik Zscheile <zseri.devel@ytrizja.de>"]
description = "Quite fast file to slice reading"
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/zserik/readfilez"

[features]
seek_convenience = []

[dependencies]
delegate-attr = "0.2"
memmap = "0.7"
